ata(4) expects IDENTIFY data to be in host endianess. Logic borrowed from siisata(4) (which I've confirmed works on sparc64). Should fix PR kern/39659.